[package]
name = "pants-cache-github-actions-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.28"
# opendal = "0.40.0"
opendal = {git = "https://github.com/huonw/incubator-opendal", branch = "huonw/3162-ghac-partial"}
tokio = { version = "1", features=["full"] }
